-ps_scan: added --pfscan and --psa2msa options to include paths to the respective binaries. Also added $;PFSCAN$; and $;PSA2MSA$; variables to default software config.
-predict_prokaryotic_gene_function: minor name processing updates
-MSF2Bsml.pl: fixed bug whereby id "repair" was mangling non-truncated new style ('.'-delimited) ids.

ergatis-v2r9b1
--------------
-added refresh_chado_mart to the installer
-bsml2fasta: fixed bug 2008114 - was failing to read compressed BSML files from input lists.
-installer: now compiles/installs C sources (chado_record_uniq, cluster, etc.)
-installer: removed obsolete region component from installer section
-legacy2bsml: Now supports mysql/euk.  Fixed bug in handling of 1 base exon features.
-interface: project list in templates tab now sorted alphabetically

ergatis-v2r8b1
--------------
-software.config: added sections for rdp_classifier, stap_aligner, stap_classifier
-targetp2legacydb.pl: revised pattern match on model name during raw file parsing
-get_pipeline_lists.cgi: now checks for the existance of the path stored in 'temp_space' of ergatis.ini and creates it if it doesn't exist
-Prokaryotic_Annotation_Pipeline: Removed unnecessary variables from pipeline_summary.default.config
-Util: Added check_pipeline_template_configs.pl
-priam_ec_assignment: initial commit
-ec_assignment: removing component from svn and Makefile.PL
-hmmpfam2htab.pl: removes slashes from temp filename
-software.config: removed unused $;HTAB_EXEC$; variable
-pepstats: removed unused parameters in config file (obviously from a component copy)
-stap_aligner: component added
-stap_classifier: component added
-rdp_classifier: component added
-genbank2bsml: new command-line options and bug fixes to support pan-genome analyses
-pangenome_blast_parse.pl, pangenome_query_list.pl: generalized regexes to not fail so much
-installer: added stap_aligner, stap_classifier and rdp_classifier components
-legacy2bsml: added host and rdbms arguments